[package]
name = "tinydraw"
version = "0.3.0"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
edition = "2021"
description = "A small library for 2D drawing in Rust"
readme = "README.md"
repository = "https://github.com/amamic1803/tinydraw-rs"
license = "MIT"
keywords = ["drawing", "graphics", "rendering", "images"]
categories = ["graphics", "rendering"]


[dependencies]
image_io = { version = "0.24.7", package="image", optional = true }

[features]
file_io = ["dep:image_io"]

[package.metadata.docs.rs]
all-features = true
