[package]
name = "tinydraw"
version = "0.3.0"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
edition = "2021"
description = "A small library for 2D drawing in Rust"
readme = "README.md"
repository = "https://github.com/amamic1803/tinydraw-rs"
license = "MIT"
keywords = ["drawing", "graphics", "rendering", "images"]
categories = ["graphics", "rendering"]

[profile.release]
lto = true

[profile.test]
opt-level = 3

[dependencies]
image = { version = "0.25.1", optional = true }

[package.metadata.docs.rs]
all-features = true
